add moment and optimize running websocket

--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "fcsa-socket-io",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.6.0",
+    "npm": "8.13.2"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "moment": "^2.29.4",
     "postcss-preset-env": "^7.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-if": "^4.1.4",
     "react-redux": "^8.0.4",
     "react-responsive": "^9.0.0",
     "react-scripts": "5.0.1",
@@ -19,10 +23,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm start",
+    "build:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
