--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss-preset-env": "^7.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-if": "^4.1.4",
     "react-redux": "^8.0.4",
     "react-responsive": "^9.0.0",
     "react-scripts": "5.0.1",
