--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-responsive": "^9.0.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "serve": "^14.0.1",
     "use-socket.io-client": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
